# vibe

./: .dockerignore  .env.example  .gitignore  .mcp.json  Anchor.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  requirements.txt  scrape_aniston_images.py  sharbel_x_posts.md  tsconfig.json  wrangler.jsonc  wrangler.toml
app/: next.config.js  package-lock.json  package.json  tailwind.config.js
autoagent/: .dockerignore  .env.example  .gitignore  Dockerfile.base  README.md  agent-claude.py  agent.py  program.md  pyproject.toml
bot/: Dockerfile  deploy-commands.ts  package.json  render.yaml  requirements.txt  tsconfig.json  vibe_bot.py
bot/src/: config.js  deploy-commands.js  index.js  index.ts
css/: style.css
js/: app.js  data.js
knowledge/: index.md
programs/discord-poker/: Cargo.toml
programs/discord-poker/src/: errors.rs  lib.rs
programs/discord-poker/src/instructions/: advance_phase.rs  create_table.rs  join_table.rs  leave_table.rs  mod.rs  place_bet.rs  settle.rs  start_game.rs
programs/discord-poker/src/state/: game.rs  mod.rs  player.rs
programs/discord-poker/src/utils/: deck.rs  hand_eval.rs  mod.rs
public/: index.html
scripts/: deploy.sh
src/: __main__.py  bot.py  categorizer.py  cli.py  cloud_storage.py  config.py  data.ts  discord_webhook.py  engine.ts  enrichment.py  exporter.py  main.ts  pages-home.ts  pages-other.ts  pages-train.ts  progress.py  purchaser.py  scan-now.js  scorer.py  scraper.py  server.js  watchlist.py  web.py
tests/: discord-poker.ts
(+113 files in other folders)
