[package]
name = "discord-poker"
version = "0.1.0"
description = "DiscordPoker - Decentralized Texas Hold'em on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "discord_poker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
